2010-02-19  Heinz Diehl <htd@fancy-poultry.org>

	* mime-edit.el (mime-edit-set-encrypt): Fix typo.

2010-02-07  David Maus <maus.david@gmail.com>

	* mime-edit.el (mime-edit-encrypt-pgp-mime): Added Version tag for
	pgp-encrypted messages to comply with RFC3156.
	* mime-edit.el (mime-edit-pgp-enclose-buffer): Sign and encrypt
	pgp message in conformance to RFC3156.

2010-01-25  Harald Judt  <h.judt@gmx.at>

	* mime-edit.el (mime-content-types): Added more MIME types.

2010-01-25  Vitaly Mayatskikh  <v.mayatskih@gmail.com>

	* mime-edit.el (mime-edit-insert-file): Ask user for MIME type and
	subtype during interactive file insertion, not only encoding.
	* mime-pgp.el (toplevel): New function:
	`mime-display-multipart/pgp-encrypted'.
	* pgg-def.el (toplevel): New custom: `pgg-decrypt-automatically'.
	* semi-setup.el (toplevel): New mime-preview condtion for MIME
	type "application/pgp-encrypted".

2010-01-19  Vitaly Mayatskikh  <v.mayatskih@gmail.com>

	* mime-view.el (toplevel): New defcustom: mime-view-buttons-visible
	* mime-view.el (mime-display-entity): Use mime-view-buttons-visible
	to control visibility of MIME buttons.

2007-06-18  Daiki Ueno  <ueno@unixuser.org>

	* mime-edit.el (turn-on-mime-edit): Remove redundant comments and
	newlines to make the amount of diff-lines minimal to the original.

2007-06-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-edit.el (turn-on-mime-edit): Don't use the default values
	of paragraph-start and paragraph-separate.  Suggested by Ron
	Isaacson <Ron.Isaacson@morganstanley.com>.  cf.
	http://article.gmane.org/gmane.mail.wanderlust.general.japanese/5721

2007-04-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-edit.el (turn-on-mime-edit): Make paragraph-start and
	paragraph-separate buffer-local.

2006-12-20  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* README.ja, README.en (Required environment): Update required
	version of APEL to 10.7 or later.

	* SEMI-CFG (PACKAGEDIR): Use